--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "node ./src/server.js",
-    "start:prod": "node ./src/server.js"
-  },
+    "start": "node src/server.js",
+    "start-dev": "nodemon src/server.js"
+    },
   "author": "darman",
   "license": "ISC",
   "keywords": [],
